[package]
name = "ytml"
version = "0.1.0"

edition = "2021"
description = "A markup language that offers a different syntax to html"
license = "MIT"

publish = false

[dependencies]
ytml-lang = {path = "packages/ytml-lang", features = ["fs", "display"] }

[workspace]
members = [
  "packages/ytml-lang",
  "packages/ytml-cli",
  "examples/inner-content",
  "examples/read-file"
]

[workspace.dependencies]
ytml-lang = {path = "packages/ytml-lang", features = ["fs"] }
