[package]
name = "ytml"
version = "0.1.0"

edition = "2021"
description = "A markup language that offers a different syntax to html"
license = "MIT"

publish = false

[dependencies]
ytml-lang = {path = "packages/ytml-lang", features = ["fs", "display"] }

[workspace]
members = [
  "packages/ytml-lang",
  "packages/ytml-cli",
  "examples/inner-content",
]

[workspace.dependencies]
ytml-lang = {path = "packages/ytml-lang"}

# Benchmark settings
[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "lang_bench"
harness = false
